// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative --doc_out=../doc --doc_opt=html,index.html gateway.proto
syntax ="proto3";

option go_package = "github.com/CVN003/scstgateway/scst";

package scst;

/* 
SVD SCST VIRTUAL DISK
AddSVDReq is the request for adding a SVD
*/
message AddSVDReq {
    string LunName = 1; // lun name
    string LunDeviceFullPath = 2; // lun device(file) real path
    string VID = 3; // vendor id
    string PID = 4; // product id
    string USN = 5; // unique serial number
    string HandlerType = 6; // handler type should be vdisk_blockio || vdisk_fileio
}
//  RemoveSVDReq is the request for removing a SVD
message RemoveSVDReq {
    string LunName = 1; // lun name
    string HandlerType = 2;// handler type should be vdisk_blockio || vdisk_fileio
}

// AddGroupReq is the request for adding storage group 
message AddGroupReq {
    string TargetName = 1;  // target name
    string TargetType = 2;      // target type should be iscsi || qla2x00t
    string GroupName = 3; // storage group name
}
//  AddLun2GroupReq is the request for adding one lun to storage group 
message AddLun2GroupReq {
    string TargetName = 1; // target name
    string TargetType = 2; // target type should be iscsi || qla2x00t
    string GroupName = 3; // storage group name
    string LunName = 4; // lun name
}

// AddIni2GroupReq is the request for adding one initiator to storage group 
message AddIni2GroupReq {
    string TargetName = 1; // target name
    string TargetType = 2; // target type should be iscsi || qla2x00t
    string GroupName = 3; // storage group name
    string Ini = 4; // initiator name
}
// RemIni2GroupReq is the request for remove one initiator to storage group 
message RemIni2GroupReq {
    string TargetName = 1; // target name   
    string TargetType = 2; // target type should be iscsi || qla2x00t
    string GroupName = 3; // storage group name
    string Ini = 4; // initiator name
}
// Get current SCST's running config from kernel
message GetLiveConfigReq {}


// Save current SCST's running config to /usr/local/scstgateway/etc/$version.json
message SaveConfigReq {
    string Version=1;
}

// general response
message SCSTResp {
    int32 code =1; // 0: success, other: failed
    string msg=2;   // error message
    string data=3; // json string
}

service SCSTGateway{
    rpc AddSVD(AddSVDReq) returns (SCSTResp) {}
    rpc RemoveSVD(RemoveSVDReq) returns (SCSTResp) {}
    rpc AddGroup(AddGroupReq) returns (SCSTResp) {}
    rpc AddLun2Group(AddLun2GroupReq) returns (SCSTResp) {}
    rpc AddIni2Group(AddIni2GroupReq) returns (SCSTResp) {}
    rpc RemIni2Group(RemIni2GroupReq) returns (SCSTResp) {}
    rpc GetLiveConfig(GetLiveConfigReq) returns (SCSTResp) {}
    rpc SaveConfig(SaveConfigReq) returns (SCSTResp) {}
}